--- a/css/main.css
+++ b/css/main.css
@@ -2056,6 +2056,15 @@ div.jfilestyle label:hover {
   margin-bottom: 0;
 }
 
+.left-bar_button.__cloned {
+  margin-bottom: 15px;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #888888;
+  text-decoration: none;
+  text-align: left;
+}
+
 .left-bar_langs {
   display: flex;
 }
@@ -2076,6 +2085,28 @@ div.jfilestyle label:hover {
   display: block;
 }
 
+.left-bar_langs.__cloned {
+  margin-bottom: 15px;
+  margin-top: 40px;
+  justify-content: center;
+}
+
+.left-bar_langs.__cloned .left-bar_lang {
+  display: block !important;
+  padding: 0;
+  font-size: 16px;
+  margin-right: 15px;
+  color: #888888;
+}
+
+.left-bar_langs.__cloned .left-bar_lang:last-child {
+  margin-right: 0;
+}
+
+.left-bar_langs.__cloned .left-bar_lang.active {
+  color: #D4302F;
+}
+
 .left-bar_langs:hover .left-bar_lang {
   display: block;
 }
@@ -2087,6 +2118,13 @@ div.jfilestyle label:hover {
   transform: translateX(-50%);
   text-decoration: none;
   text-align: center;
+}
+
+.logo.__cloned {
+  position: static;
+  transform: none;
+  display: block;
+  margin-top: 10px;
 }
 
 .logo img {
@@ -3581,7 +3619,7 @@ div.jfilestyle label:hover {
 
   .thread_content {
     padding: 0 10px 41px;
-    margin-top: 20px;
+    margin-top: 30px;
   }
 
   .thread_title {
@@ -3600,6 +3638,7 @@ div.jfilestyle label:hover {
 
   .thread_player .audioplayer-bar {
     top: 130px;
+    height: 8px;
   }
 
   .thread_player .audioplayer-time-duration {
@@ -3682,6 +3721,10 @@ div.jfilestyle label:hover {
     top: 1px;
   }
 
+  .comments {
+    margin-top: 20px;
+  }
+
   .comments_content {
     margin-top: 60px;
     margin-left: -50px;
@@ -3707,6 +3750,10 @@ div.jfilestyle label:hover {
 
   .comments_text {
     font-size: 12px;
+  }
+
+  body.hide-leftbar .content {
+    padding-left: 20px;
   }
 
   .content.__profile-page {
@@ -3953,6 +4000,10 @@ div.jfilestyle label:hover {
     padding: 15px 0 0;
   }
 
+  body.hide-leftbar .left-bar {
+    display: none;
+  }
+
   .post {
     display: block;
   }
@@ -4013,6 +4064,10 @@ div.jfilestyle label:hover {
   .content {
     padding-left: 60px;
     padding-right: 10px;
+  }
+
+  body.hide-leftbar .content {
+    padding-left: 10px;
   }
 
   .content.__profile-page {
@@ -4089,5 +4144,11 @@ div.jfilestyle label:hover {
 
   .threads_item.__col-2 {
     width: 100%;
+  }
+}
+
+@media 767px {
+  .thread_player .audioplayer-bar-loaded {
+    height: 8px;
   }
 }
