--- a/css/main.css
+++ b/css/main.css
@@ -3020,7 +3020,7 @@ div.jfilestyle label:hover {
   border-radius: 50%;
 }
 
-.thread_pic-inner {
+.thread_pic a {
   pointer-events: auto;
   display: flex;
   align-items: center;
@@ -3028,11 +3028,11 @@ div.jfilestyle label:hover {
   text-decoration: none;
 }
 
-.thread_pic-inner span {
+.thread_pic a span {
   font-size: 14px;
 }
 
-.thread_pic-inner img {
+.thread_pic a img {
   flex-shrink: 0;
   width: 32px;
   margin-right: 10px;
