--- a/css/main.css
+++ b/css/main.css
@@ -3981,6 +3981,8 @@ div.jfilestyle label:hover {
     display: block;
     font-size: 16px;
     margin-right: 0;
+    margin-bottom: 15px;
+    text-align: center;
   }
 
   .header_menu-btn {
